# kindle-to-anki

./: .releaserc  Cargo.toml  README.md
.github/: gh-lint
.github/actions/: setup.yml
.github/actions/setup/: action.yml
.github/workflows/: auto-merge-pr.yml  build.yaml  build.yml  cd.yml  ci.yml  clippy.yml  dependabot-auto-merge.yml  lint-repo.yml  playground.yml  pr.yml
configs/: grcov.yml
src/: cli.rs  db.rs  lib.rs  main.rs  model.rs  out.rs
src/dictionary/: merriam_webster.rs  mod.rs
src/file/: csv.rs
test/: vocab.csv  vocab.sqlite
test/merriam_webster/collegiate/: voluminous_response.json
