[package]
name = "kindle-to-anki"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.6", features = [ "runtime-async-std-rustls", "sqlite" ] }
async-std = { version = "1", features = [ "attributes" ] }
futures = "0.3.28"
csv = "1.2.1"
tempfile = "3.5.0"
serde = {version = "1.0.159", features=["derive"]}
serde_json = "1.0.95"

[dev-dependencies]
pretty_assertions = "1.3.0"
