[package]
name = "kindle-to-anki"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8.0", features = [ "runtime-async-std-rustls", "sqlite" ] }
async-std = { version = "1.12.0", features = [ "attributes" ] }
futures = "0.3.30"
csv = "1.3.0"
tempfile = "3.10.1"
itertools = "0.14.0"
